--- a/references.bib
+++ b/references.bib
@@ -13,3 +13,12 @@
   url = {https://avehtari.github.io/ROS-Examples/},
 }
 
+@chatgpt{chatgpt,
+  title = {ChatGPT Conversation},
+  author = {ChatGPT},
+  howpublished = {Online},
+  year = {2024},
+  note = {URL: Conversations are ephemeral and do not have a specific publication date.},
+}
+
+
